# universal-android-debloater

./: .deepsource.toml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
.github/: release.yml
.github/ISSUE_TEMPLATE/: add-new-package-s-.md  bug_report.md  debloat-issue-report.md  feature_request.md  new-package-s-.md  update-apps-description-or-recommendation.md
.github/workflows/: build.yml  build_artifacts.yaml  build_artifacts.yml  ci.yml  legacy_build.yml  release.yml
debloat_lists/: all.json  aosp.json  carriers.json  google.json  miscellaneous.json  pending.json
debloat_lists/oem/: asus.json  huawei.json  lg.json  motorola.json  nokia.json  oneplus.json  oppo.json  samsung.json  sony.json  tcl.json  xiaomi.json  zte.json
resources/assets/: icons.json  uad_lists.json
ressources/assets/: uad_lists.json
ressources/screenshots/: v0.3png
src/: main.rs
src/core/: config.rs  mod.rs  save.rs  sync.rs  theme.rs  uad_lists.rs  update.rs  utils.rs
src/gui/: mod.rs  style.rs
src/gui/views/: about.rs  list.rs  mod.rs  settings.rs
src/gui/widgets/: mod.rs  modal.rs  navigation_menu.rs  package_row.rs
