[package]
name = "uad_gui"
description = "A cross-platform GUI debloater for android devices"
version = "0.6.0"
authors = ["w1nst0n"]
license = "GPL-3.0"
homepage = "https://github.com/Frigyes06/universal-android-debloater"
repository = "https://github.com/Frigyes06/universal-android-debloater"
readme = "README.md"
keywords = ["debloater", "android", "adb", "privacy", "bloatware"]
categories = ["gui"]
edition = "2021"

[features]
default = ["wgpu", "self-update"]
wgpu = []                         # Iced/wgpu is default
glow = []              # OpenGL support
self-update = ["flate2", "tar"]
no-self-update = []

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
static_init = "^1.0"
fern = { version = "^0", features = ["colored"] }
chrono = { version = "^0.4", default-features = false, features = ["std", "clock"] }
log = "^0.4"
regex = "^1.10.2"
toml = "^0"
dirs = "^5.0.0"
ureq = { version = "*", features = ["json"] }
retry = { version = "^2.0.0" }
iced = "0.9.0"
iced_native = "^0.10.3"
iced_wgpu = "^0.11.1"
iced_glow = "^0.8.0"
iced_core = "^0.10.0"
iced_futures = "^0.7.0"
iced_graphics = "^0.9.0"
iced_winit = "^0.10.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = { version = "^1", optional = true }
tar = { version = "^0.4", optional = true }

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
