[package]
name = "uad_gui"
description = "A cross-platform GUI debloater for android devices"
version = "0.5.1"
authors = ["w1nst0n"]
license = "GPL-3.0"
homepage = "https://github.com/0x192/universal-android-debloater"
repository = "https://github.com/0x192/universal-android-debloater"
readme = "README.md"
keywords = ["debloater", "android", "adb", "privacy", "bloatware"]
categories = ["gui"]
edition = "2021"

[features]
default = ["self-update"]
self-update = ["flate2", "tar"]
no-self-update = []

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
static_init = "^1.0"
fern = { version = "^0", features = ["colored"] } # TO CHANGE // no longer maintained
chrono = { version = "^0.4", default-features = false, features = ["std", "clock"] }
log = "^0.4"
regex = "^1.0"
toml = "^0"
dirs = "^5.0.0"
ureq = { version = "*", features = ["json"] }
retry = { version = "^2.0.0" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = { version = "^1", optional = true }
tar = { version = "^0.4", optional = true }

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
